# SockFuzzer

./: .bazelrc  .clang-format  .clang-tidy  .dockerignore  .gitignore  .pre-commit-config.yaml  BUILD.bazel  CMakeLists.txt  Dockerfile  README-sockfuzzer.md  README.md  WORKSPACE.bazel  flake.nix  llvm_toolchain.nix  nixpkgs.nix  sockfuzzer_base_image.nix
bazel/: asan_dbg_binary.bzl  cc_object.bzl  generic_cc_binary.bzl  headers.bzl  mig.bzl
bsd/kern/: uipc_domain.c  uipc_mbuf.c  uipc_syscalls.c
bsd/net/: if.c  ntstat.c
bsd/netinet/: in_rmx.c  mp_pcb.c  mptcp.c  tcp_cache.c
bsd/netinet6/: in6_ifattach.c  mld6.c  nd6.c
docs/: architecture.md  scheduler.md  testing.md
fuzz/: README  net_fuzzer.cc  net_fuzzer.options  net_fuzzer.proto  types.h
fuzz/api/: backend.c  backend.h  ioctl.c  syscall_wrappers.c  syscall_wrappers.h
fuzz/common/: BUILD.bazel  utility.cc  utility.h  utility_test.cc
fuzz/executor/: BUILD.bazel  coroutine_executor.cc  coroutine_executor.h  coroutine_executor_test.cc
fuzz/fakes/: fake_impls.c  mbuf.c  osfmk_stubs.c  san.c  stubs.c  thread.c  zalloc.c
fuzz/handlers/: BUILD.bazel  bsd.cc  bsd_types.h  command.cc  command.h  command_test.cc  command_thread.cc  command_thread.h  mach_message.cc  mach_message.h  mig_generated.h  mig_types.cc  mig_types.h  necp.cc  session.cc  session.h
fuzz/host/: BUILD.bazel  host.S  host.cc  host.h  host_interface.h  host_test.cc  hw_ticket_lock_manager.cc  hw_ticket_lock_manager.h  hw_ticket_lock_manager_test.cc  logger.cc  logger.h  logger_test.cc  mock_host.h  test_runner.c  validate_sections.py
fuzz/host/hypercall/: BUILD.bazel  hypercall.cc  hypercall.h  interrupt.h  lock.h  thread.h  types.h
fuzz/host/words/: BUILD.bazel  adjectives.h  nouns.h
fuzz/proto/: BUILD.bazel  bsd.proto  bsd_enums.proto  bsd_types.proto  common.proto  mach_message.proto  mach_traps.proto  mig_types.proto  schedule.proto  session.proto
fuzz/xnu/: BUILD.bazel  libxnu.redef  xnu_version_script.lds
fuzz/xnu/bsd/: BUILD.bazel
fuzz/xnu/bsd/api/: backend.h  bsd_backend.c  ioctl.c  ioctl.h
fuzz/xnu/bsd/fakes/: fake_impls.c  mbuf.c  mcache.c  platform_expert.c  root_device.c  stubs.c  vfs.c
fuzz/xnu/common/: BUILD.bazel  test_utils.c  test_utils.h
fuzz/xnu/osfmk/: BUILD.bazel
fuzz/xnu/osfmk/api/: backend.h  osfmk_backend.c  scheduler_state.c  scheduler_state.h  thread.c  thread.h  types.h
fuzz/xnu/osfmk/fakes/: atomic.c  atomic.h  clock.c  continuation.c  copyio.c  cpu_data.c  locks.c  log.c  mach_notify.c  machine.c  osfmk_stubs.c  platform_expert.c  pmap.c  scheduler.c  thread.c  timer.c  zalloc.c
fuzz/xnu/osfmk/fakes/sync/: attr.cc  group.cc  locks.cc  mutex.cc  rw_lock.cc  spin.cc  tlock.cc
fuzz/xnu/osfmk/test/: osfmk_test_impl.c  osfmk_test_impl.h
fuzz/xnu/san/: BUILD.bazel
fuzz/xnu/san/fakes/: san.c
fuzz/xnu/test/: BUILD.bazel  backend.cc  backend.h
tools/generate_syscall/: BUILD.bazel  call_bsd_syscall.h  downstream_field.py  downstream_syscall.py  downstream_syscall_manager.py  downstream_syscall_manager_test.py  downstream_syscall_parser.py  downstream_syscall_parser_test.py  downstream_syscall_test.py  generate_defs_from_upstream.sh  upstream_syscall.py  upstream_syscall_manager.py  upstream_syscall_manager_test.py
tools/generate_syscall/data/: syscalls.defs
tools/generate_syscall/templates/: wrappers_header_preamble.h
